--- a/html/solution/BasicCalculator.html
+++ b/html/solution/BasicCalculator.html
@@ -58,8 +58,7 @@
 
 
 
-<div class="comment">
-算法 ：
+算法 ：<br>
 维持一个 sum初始化为0 and sign初始化为‘+’ <br>
 遇到数字就更新sum <br>
 遇到符号就更新sign <br>
@@ -67,13 +66,13 @@
 遇到‘)’就把之前的值弹出来，和当前值相加<br>
 
 <br>
-code Note: 把数字扣出来的时候要考虑
+code Note: 把数字扣出来的时候要考虑<br
 1.过界<br>
-2 下标一直在变， 不能用固定的c，要用s.charAt(i);
+2 下标一直在变， 不能用固定的c，要用s.charAt(i);<br>
 
-while( i&lt;s.length( &amp;&amp; character.isDigit(s.charAt(i)))){
-  i++;
-}
+while( i&lt;s.length( &amp;&amp; character.isDigit(s.charAt(i)))){  <br>
+  i++;  <br>
+}  <br>
 
 
 
