--- a/html/solution/Design_Instangram.html
+++ b/html/solution/Design_Instangram.html
@@ -211,7 +211,7 @@ create index idx_on_photo_id_and_creationTime on photo(id, createdAt);
 
 Push Mode:
 pro: latency is low, since you have a table store all the feed of a user.
-cons: Fan out for celebrity, it takes time and it costs quite a few async workers.
+cons: Fan out for celebrity, it takes time and resources(async workers).
 
 How to solve celebrity problem using push mode.
 Hybrid mode: Push for regular user and pull for Celebrity.
@@ -222,6 +222,7 @@ How ?
 Create a seperate celebrity photo table for celebrity and do not fanout the photo id to feed table.
 When one user requests feed view, it gets feed from feed table and then get the users that he is following and join with celebrity photo table,
 Those two components merge together.
+
 
 Can we define a boundry for celebrity?
 No, because number of fans are changing and for those that are on the line, Fan out sometimes happen, sometimes doesn't happen, which causes
