--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -96,5 +96,10 @@ Feb 2020           : Facebook design questions in one acre three points
 1/19        7                                             3 of hard
 1/20        7                                             6 of medium
 1/21
+
+1/27                 3        drop 485 + informational
+1/28        1.5      2
+
+
 </code></pre>
 </body>
