--- a/html/solution/basicCalculatorII.html
+++ b/html/solution/basicCalculatorII.html
@@ -66,8 +66,8 @@
 算法 ：
 stack里存带符号的数字
 
-1. 遇到数字就提取出来处理放进stack里： 前面符号是 +-,就直接压，前面符号是*/,把前面的值弹出来和当前值做*/然后在压栈。
-2. 遇到符号就变号。
+1. 遇到数字就提取出来按照逻辑放进stack里： 前面符号是 +-,就直接压，前面符号是*/,把前面的值弹出来和当前值做*/然后在压栈。
+2. 遇到符号就变号（不用做任何运算）
 
 
 
