--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -100,7 +100,8 @@ Feb 2020           : Facebook design questions in one acre three points
 1/27                 3        drop 485 + informational
 1/28        3        2
 1/29        5        2          930-1030                     1-3 coding
-1/30       1.5                  930-1100
+1/30       1.5       2           930-1100
+1/31                1.5        Informational
 
 </code></pre>
 </body>
