--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -60,7 +60,7 @@
 <div class="codingSubSectionName">Graph Theory</div>
 <ul>
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
-	 <li><a style="color:red"  href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/UnionFind.html">Union Find：无向图分类(或者用BFS,DFS做)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/2DDFSSummary.html">2D Array棋盘类DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</a></li>
 </ul>
@@ -114,7 +114,7 @@
 <div class="codingSubSectionName">2D BFS</div>
 <ul>
 
-	 <li><a style="color:red"; href="solution/2DBoardSearch.html">2D图盘能否从一点走到另一点模板（BFS + DFS 必背模板）</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
+	 <li><a href="solution/2DBoardSearch.html">2D图盘能否从一点走到另一点模板（BFS + DFS 必背模板）</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
 	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
 	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
 	 <li><a href="solution/zombieinMatrix.html">Zombie in Matrix</a> <a href="http://www.lintcode.com/en/problem/zombie-in-matrix/">Q</a></li>
