--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -358,16 +358,10 @@
 
 <div class="codingSectionName">System Design</div>
 <ul>
-  <li><a href="solution/Design.html">Design Summary </a></li>
-
-
-
+  <li><a href="solution/Design.html">Design Question Summary </a></li>
 </ul>
 
-<div class="codingSectionName">TimeLine</div>
-<ul>
-  <li><a href="solution/time.html">Hours</a></li>
-</ul>
+
 
 <div class="codingSectionName">Interview</div>
 <ul>
