--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -38,11 +38,13 @@ How to prepare System design:
 
 
 Facebook Design Questions:
-<li> <a href="Design_Instangram.html">1. Design news feed : Facebook/Instangram/Twitter/微信朋友圈 </a></li>
+<li> <a href="Design_Instangram.html">Design news feed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
+<li> <a href="Design_Instangram.html">Design API rate limiter</a></li>
 
-Design Memcached
-Design Uber
-Design Chat System
+Design fast database cache: Memcached/Redis
+Design location based application: Uber, Yelp
+Design Chat System: WeChat, What's app
+Design Streaming app: Netflix, Youtube.
 
 
 
