--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -40,6 +40,7 @@ Coding:
        on Facebook medium/hard
        https://leetcode.com/problemset/algorithms/?companySlugs=facebook&difficulty=Medium&status=Todo
 
+1/31   Done facebook green and yellow tag. Skip blue tag for now. Starting Google tag green and yellow
 
 
 Design:
