--- a/html/solution/RedundentConnection.html
+++ b/html/solution/RedundentConnection.html
@@ -8,48 +8,45 @@
 <body>
 <pre><code>
 Union find Version easy without rank map
-Time complexity 近似O(e)。 Leetcode: 1ms
+Time complexity 近似O(e)。Union find takes O(1)
 
-  class Solution {
-  int[] findRedundantConnection(int[][] edges) {
+class Solution {
+  public int[] findRedundantConnection(int[][] edges) {
+      int[] ret = null;
       UF uf = new UF();
-      for (int[] edge : edges) {
-          if (uf.union(edge[0], edge[1])) {
-              return edge;
+      for( int[] edge : edges){
+          if (!uf.union(edge[0], edge[1])){
+              ret = edge;
           }
       }
-      return null;
+      return ret;
+  }
+}
+
+class UF{
+  int[] parent;
+
+  UF(){
+      parent = new int[1001];
+      for( int i=0; i&lt;1001; i++){
+          parent[i] = i;
+      }
   }
 
-  class UF {
-      int[] parent;
-      UF() {
-          parent = new int[2000];
-          for (int i = 0; i < 2000; i++) {
-              parent[i] = i;
-          }
-      }
-
-      int find(int n) {
-          if (parent[n] == n) {
-              return n;
-          }
-          return find(parent[n]);
-      }
-
-      boolean union(int n1, int n2) {
-          int p1 = find(n1);
-          int p2 = find(n2);
-          if (p1 == p2) {
-              return true;
-          }
-
-          parent[p1] = p2;
-          return false;
-      }
-  };
-
+  int find( int n){
+      if ( n == parent[n]) return n;
+      return find(parent[n]);
   }
+
+  boolean union( int n1, int n2){
+      int p1 = find(n1);
+      int p2 = find(n2);
+      if ( p1 == p2) return false;
+
+      parent[p1] = p2;
+      return true;
+  }
+}
 
 
 
