--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -1,37 +1,47 @@
 Union Find( disjoint set, 并查集）<br><br>
-应用：无向图分类<br>
-应用特征 图一般表达为 int[][] edges, 因为函数接口take两个顶点。 uf.union(A, B)<br>
+
+应用：1. 无向图分组， 2无向图找环<br>
+应用特征 图一般表达为 int[][] edges, 因为函数接口take两个顶点。 uf.union(A, B)<br><br>
+
+模版<br>
+find: 返回这个节点的root<br>
+union: 合并这两个节点的根节点,  每union(A, B)一次，和两个点就归为一类,  时间复杂度近似O(1)<br><br>
+
+技巧：<br>
+count 是用来分组的，如果不分组，就不需要这个变量，初始化的时候不需要知道有多少个点，用一个最大点的范围初始化parent. 例子为Redundant Connection<br>
+if( p1 == p2) 是用来判断环的<br>
+
+如何应用Union Find，思考两个问题<br>
+Step 1 : 判断题目里的不可交集是什么（vertex，email account）<br>
+step 2 : 判断题目里的合并的依据是什么（两点连边，矩阵元素相邻，同一个用户的email)。<br><br>
 
 <li><a href="RedundentConnection.html">Redundant Connection(无向图找环: Union Find, DFS)</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-<li><a href="ValidGraphTree.html">Valid Graph Tree(无向图找环：Union Find, BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
-<li><a href="NumberOfConnectedComponentsInUndirectedGraph.html">Number of connected Components in undirected Graph(无向图找子图个数：Union Find, BFS)</a> <a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Q</a>  </li>
-<li><a href="MergeEmailAccount.html">Merge email accounts(Union find 应用，比较难想出如何用union find)</a> <a href=https://leetcode.com/problems/accounts-merge/solution/>Q</a></li>
+<li><a href="ValidGraphTree.html">Valid Graph Tree(无向图分组找环：Union Find, BFS)</a> <a href=https://leetcode.com/problems/graph-valid-tree/>Q</a>  </li>
+<li><a href="NumberOfConnectedComponentsInUndirectedGraph.html">Number of connected Components in undirected Graph(无向图分组：Union Find, BFS)</a> <a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Q</a>  </li>
 <br>
 <br>
 
- 如何应用Union Find，思考两个问题<br>
- Step 1 : 判断题目里的不可交集是什么（点，email account）<br>
- step 2 : 判断题目里的合并的依据是什么（两点连边，矩阵元素相邻，同一个用户的email)。<br><br>
 
 
 
-数据结构 :  hashmap <br>
-函数     ：<br>
-            constructor<br>
-            find: 返回这个节点的root,这是模版<br>
-            union: 合并这两个节点的根节点,  每union(A, B)一次，和两个点就归为一类,  时间复杂度近似O(1)
+
+
+
+
 <pre><code>
 
 
 简单版本：
 class UF
 {
-    int[] parent = new int[10000];
+    int[] parent;
+    int count;
 
-    UF(){
-        for( int i=0; i&lt;10000; i++){
+    UF(int n){
+        for( int i=0; i&lt;n; i++){
             parent[i] = i;
         }
+        count = n;
     }
 
     int find(int node){
@@ -46,9 +56,10 @@ class UF
         int root2 = find(n2);
 
         if ( root1 == root2){
-          return;
+          return;                 ／／ 这个条件表示这两个顶点已经是一个组的了，说明这条表示多余的，构成了环
         }
 
+        count--;
         parent[root1] = root2;
     }
 
