--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -103,6 +103,7 @@ Feb 2020           : Facebook design questions in one acre three points
 1/29        5        2          930-1030                     1-3 coding
 1/30       1.5       2           930-1100
 1/31                1.5        Informational
+2/1         2                  11-1 coding 
 
 </code></pre>
 </body>
