--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -73,6 +73,7 @@
 
 <div class="codingSubSectionName">DFS + Memorization</div>
 <ul>
+  <li><a href="solution/jumpGameV.html">JumpGameV</a> <a href="https://leetcode.com/problems/jump-game-v/">Q</a>  </li>
 	 <li><a href="https://leetcode.com/problems/longest-increasing-path-in-a-matrix/">Longest increasing path in matrix</a>  </li>
    <li><a href="https://leetcode.com/problems/burst-balloons/">Burst Balloons</a>  </li>
 </ul>
