--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -62,6 +62,10 @@ Feb 2020           : Facebook design questions in one acre three points
 2. Do not do the problem where downvote is more than upvote.
 
 
+Weekly test
+number           rank         score    Finish time     Q1        Q2          Q3
+174             1912 / 6997   12	     1:32:56	      0:08:39	 0:20:54	 1:07:56  5
+
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
 12/5        2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
@@ -103,7 +107,7 @@ Feb 2020           : Facebook design questions in one acre three points
 1/29        5        2          930-1030                     1-3 coding
 1/30       1.5       2           930-1100
 1/31                1.5        Informational
-2/1         2                  11-1 coding 
+2/1         2       7          11-1 coding               3-5  6:30 - 1100
 
 </code></pre>
 </body>
