--- a/html/solution/topologicalSortingTutorial.html
+++ b/html/solution/topologicalSortingTutorial.html
@@ -8,14 +8,15 @@
 <body>
 
   <li><a href="topologicalSorting.html">Topological Sorting</a>  <a href=https://www.lintcode.com/problem/topological-sorting/description>Q</a></li>
-  <li><a href="courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>
-  <li><a href="coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>
+  <li><a href="courseschedule.html">course schedule(Topological sorting)</a> <a href="https://leetcode.com/problems/course-schedule/">Q</a>  </li>
+  <li><a href="coursescheduleii.html">course schedule II</a> <a href="https://leetcode.com/problems/course-schedule-ii/">Q</a>  </li>
   <li><a href="AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
   <li><a href="EvaluateDivision.html">Evaluate Division(有向图里能否从一点到另一点，返回权重，DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
   <li><a href="reconstructitinerray.html">Reconstruct Itinerary(有向图DFS搜索某种路径： 断边法)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>
   <li><a href="FindEventualSafeStates.html">Find Eventual safe sttes(有向图DFS找环：暴力搜索法， 染色法)</a> <a href=https://leetcode.com/problems/find-eventual-safe-states/description/>Q</a>  </li>
   <li><a href="NetworkDelayTime.html">NetWork Delay(有向图DFS, 求全局权重最优)</a> <a href=https://leetcode.com/problems/network-delay-time/description/>Q</a>  </li>
   <li><a href="MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>
+  <li><a href="ShortestPathwithAlternatingColors.html">Shortest Path with Alternating Colors(有向图边带颜色求最短路径 DFS超时，BFS)</a> <a href=https://leetcode.com/problems/shortest-path-with-alternating-colors/>Q</a></li>
 
 
 
@@ -33,8 +34,8 @@
 Topological sorting 数据结构
 进度表 + 点图 => 进度BFS
 
-进度表  HashMap&lt;Integer, Integer> degree = new HashMap<>();
-点图    HashMap&lt;Integer, HashSet&lt;Integer>> = new HashMap<>(); 用HashSet的原因是adjacent list里不应该有重复的边，建图的时候要注意去掉重复的边，不然进度表和图都不对, 如果注明了没有重复的边，可以用List&lt;Integer> 代替
+进度表  HashMap&lt;Integer, Integer> degree = new HashMap&lt;>();
+点图    HashMap&lt;Integer, HashSet&lt;Integer>> = new HashMap&lt;>(); 用HashSet的原因是adjacent list里不应该有重复的边，建图的时候要注意去掉重复的边，不然进度表和图都不对, 如果注明了没有重复的边，可以用List&lt;Integer> 代替
 
 
 
@@ -43,7 +44,7 @@ Topological sorting 数据结构
 
         for( int i=0; i&lt;numCourses;i++){
             degree.put(i, 0);
-            graph.put(i, new HashSet<>());
+            graph.put(i, new HashSet&lt;>());
         }
 
 2.  构造图和进度表
@@ -60,7 +61,7 @@ Topological sorting 数据结构
 
 step 1 :找到进度为0的点
 
-Queue&lt;Integer> q = new LinkedList<>();
+Queue&lt;Integer> q = new LinkedList&lt;>();
 for( int key : degree.keySet()){
     if ( degree.get(key) == 0 ){
 	    q.add(key);
@@ -75,14 +76,12 @@ while( !q.isEmpty() ){
 
 	 count++;
 
-	 if ( graph.contains(n) ){
 		 for( int neighbor : graph.get(n) ){
 			   degree.put(neighbor, degree.get(nbeighbor)-1);
 			   if ( degree.get(neighbor) == 0 ){
 				   q.add(neighbor);
 			   }
 		 }
-	 }
 }
 
 step 3
@@ -94,12 +93,11 @@ return count == degree.size();
 //代码的注意
 
 1. 需要注意的是进度BFS不用HashSet去重，因为是从进度为0的点出发，逐步加入进度为0的点， 所以不会往会走，所以不会有重复，所以不需要去重。
-2. BFS需要判断每个点在新图中是否存在，topological sorting最后一层和孤立点没有自己的边，所以不存在新建的图graph里。 要check不然会BFS会 throw null point exception
 
 
 
-无向图遍历的时间复杂度  O( V + E) = O(N)
-有向图遍历的时间复杂度  O( V + E) = O(N^2)
+无向图遍历的时间复杂度  O( V + E) = O(V)
+有向图遍历的时间复杂度  O( V + E) = O(E) = O(V^2)
 
 
 无向图搜索的时间复杂度：N!
