--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -31,22 +31,17 @@ How to prepare System design:
 3. 如何对着公司准备：
    “对每家onsite的公司 -> 在地里翻完最近两年所有onsite面筋aggregate所有design题目 -> 对每个题目找工业界实现的blog -> 阅读每个blog，选中最好的一到两个 -> 读到烂熟，整理出我当面试官的话会问的所有问题不停考自己 -> 白板英文自行mock 3遍 -> over”
 
-
-
-
-
-
-
 Facebook Design Questions:
 <li> <a href="Design_Instangram.html">Design news feed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
-<li> <a href="Design_Instangram.html">Design API rate limiter</a></li>
+<li> <a href="Design_rateLimiter.html">Design API rate limiter</a></li>
 
 Design fast database cache: Memcached/Redis
 Design location based application: Uber, Yelp
 Design Chat System: WeChat, What's app
-Design Streaming app: Netflix, Youtube.
-
-
+Design Streaming app: Netflix, Youtube
+Design typeahead
+Design Dropbox
+Design Short URL
 
 
 
