--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -109,6 +109,11 @@ number           rank         score    Finish time     Q1        Q2          Q3
 1/31                1.5        Informational
 2/1         2       7          11-1 coding               3-5  6:30 - 1100
 2/2         3       2
+2/3                 4
+2/4         2       1           Full loop
 
+2/7                            Jingyi OS homework
+2/8                            Jingyi OS homework
+2/9                 2          Jingyi OS homework
 </code></pre>
 </body>
