--- a/html/solution/bitwiseOperator.html
+++ b/html/solution/bitwiseOperator.html
@@ -54,14 +54,32 @@ a>>8        11111111 11111111  11111111 11111111
 >>>无符号右移
 a=-2, a>>>8 00000000 11111111  11111111 11111111
 
-常用技巧1: 判断最后一位的值, n&amp;1, 右移。 常见题目： （求1的个数，两个integer bitwise comparision）
-Number of 1 Bits
+常用技巧1: 判断最后一位的值, 左移右移都可以。 常见题目： （求1的个数，两个integer bitwise comparision）
 
-while( n > 0){
-  if (( n &amp; 1) == 1){
+<li><a href="https://leetcode.com/problems/number-of-1-bits">Number of 1 in bit</a>  </li>
+
+
+//左移的解法。 Azure storage 面试的时候算法是想出来的，但是实现是错误的，还是不熟练，当然那个面试官也没看出来，他也不熟练。
+这个解法要把它背下来。
+
+int count = 0;
+
+int temp = 1;
+for( int i=0; i&lt;32; i++){
+  if (( temp&n) != 0 ){
     count++;
   }
-  n = n>>1;
+  temp = temp<&lt;1;
+}
+return count;
+
+//右移的解法。
+int count = 0;
+for(int i=0; i<32; i++){
+   if (( n & 1) == 1){
+       count++;
+   }
+   n = n>>1;
 }
 return count;
 
