--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -110,10 +110,14 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/1         2       7          11-1 coding               3-5  6:30 - 1100
 2/2         3       2
 2/3                 4
-2/4         2       1           Full loop
+2/4         2       1          MS 4 rounds full loop interview
 
 2/7                            Jingyi OS homework
 2/8                            Jingyi OS homework
 2/9                 2          Jingyi OS homework
+
+2/10                           MS 1 round team interview
+2/12                           MS 1 round team interview
+2/15        2
 </code></pre>
 </body>
